--- a/djangodamitha/templates/index.html
+++ b/djangodamitha/templates/index.html
@@ -24,7 +24,7 @@
 			</section>
 	</section><!--  end hero section  -->
 
-
+<!--
 	<section class="search">
 		<div class="wrapper">
 			<form action="#" method="post">
@@ -57,8 +57,7 @@
 				</form>
 			</div>
 		</div><!--  end advanced search section  -->
-	</section><!--  end search section  -->
-
+	<!--</section>  end search section  -->
 
 	<section class="listings">
 		<div class="wrapper">
